Prepare DHuS Distribution 2.0.0-osf